[package]
name = "tme"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tme"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }

anyhow = "1.0.87"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "2.2.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.22.0"
